nodejs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejsapp
  labels:
    app: nodejsapp
spec:
  selector:
    matchLabels:
      app: nodejsapp
  template:
    metadata:
      labels:
        app: nodejsapp
    spec:
      containers:
      - name: nodejsapp
        image: ynos999/nodejsapp:0.2
        ports:
        - containerPort: 80
