nodejs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejsapp
  labels:
    app: nodejsapp
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: nodejsapp
