nodejs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejsapp-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: nodejs.db.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejsapp
            port:
              number: 80
